# last-repo-of-gavin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  File_creation_1.py  File_creation_2.py  Makefile  README.md  ap_sorting_analysis.py  apd_finaljunction_file2.py  apd_junction_migration.py  cdstable_masterid_insert.py  cdstable_output_with_master_id.csv  csv_to_cdstable_db.py  csv_to_db_migration.py  csv_to_dbledger.py  csv_to_jobmaster.py  csv_tocdstable_db.py  demandtable_filtration2.py  demandtable_migration.py  devbox.json  dmd_table_indx.py  docker-compose.ci.yml  docker-compose.yml  filtr_job.py  insertData.py  insert_masterid_store.py  is  ledger_with_indx.py  master_id_add_in_job_master.py  master_table_file.py  msteqpt_processed.csv  mstprov.csv  procedure_apd_junction_migration.txt  pyproject.toml  pytest.ini  readme_for_migrations  readme_job_master  storemigration.py
.git - Copy/: AUTO_MERGE  COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.github/: CODEOWNERS  copilot-instructions.md
backend/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
data/: Makefile  README.md  docker-compose.yml  models.py  run_migrations.py  util_functions.py
docker/: Dockerfile.dotnet  Dockerfile.python
docs/: CONTRIBUTING.md  WORKFLOW_POLICY.md  pull_request_template.md
frontend/: .gitignore  changes.txt
scripts/: File_creation_1.py  File_creation_2.py  File_creation_3.py  File_creation_4.py  File_creation_5.py  File_creation_7.py  ap_sorting_analysis.py  apd_finaljunction_file2.py  apd_junction_migration.py  cds_migration.py  demandtable_filtration2.py  demandtable_migration.py  dmd_table_indx.py  entrypoint.sh  jobmaster_migration.py  ledger_migration.py  ledger_with_indx.py  migration_master_tbl.py  store_migration.py  store_migrations.sql  user_creation.py
test/: conftest.py
(+404 files in other folders)
