[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-backend"
version = "0.1.0"
description = "IMS backend and database integration"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.1",
  "fastapi>=0.118.3",
  "motor>=3.7.1",
  "uvicorn>=0.37.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4",
  "pytest-asyncio>=1.2.0",
  "flake8>=7.3",
  "pre-commit>=4.3.0",
]
deploy = ["gunicorn>=23.0.0"]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]
